header/image banner/top about section mobile version responsive test error fixed

--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -177,13 +177,15 @@ nav ul li a:hover {
     .background.about {
         display:flex;
         flex-direction:column; 
-        height:auto;  
+        height:auto;
+        padding:40px 10px;  
     }
     .box-side {
         display:none;
     }
     .box-center {
-        
+        width:100%;
+        height:auto
     }
 }
 
